--- a/LA_airbnb_analysis_1_revised.ipynb
+++ b/LA_airbnb_analysis_1_revised.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Santa Monica Airbnb Data Analysis\n",
     "This is a notebook that contains an analysis of Airbnb data for LA that were compiled on Nov. 3, 2020, from http://insideairbnb.com/get-the-data.html\n",
-    "The focus of this analysis is on the city of Santa Monica, where my husband and I live and host Airbnb ourselves. We are particularly interested in price/availability/amenities information in this area, and how price/availability are related to different features of the properties.  \n",
+    "The focus of this analysis is on the city of Santa Monica, where I live and host Airbnb ourselves. We are particularly interested in price/availability/amenities information in this area, and how price/availability are related to different features of the properties.  \n",
     "I will use the CRISP-DM process to outline this project."
    ]
   },
